<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Colorprimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/ColorPrimarydark"
        android:textColorHighlight="@color/ColorPrimarydark"
        android:textColorHint="@color/ColorPrimarydark"
        android:textColorLink="@color/ColorPrimarydark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personaje"
        android:autofillHints="" />

    <Button
        android:id="@+id/jugar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fondoboton"
        android:onClick="jugar"
        android:text="@string/boton"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <ImageView
        android:id="@+id/personaje"
        android:clickable="true"
        android:onClick="onCharacterImageClicked"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/personaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manzana"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/bestScore"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fondoet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jugar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fondoboton"
        android:text="Personalizar personaje"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

</androidx.constraintlayout.widget.ConstraintLayout>